[TH2-3543] Add unit tests for infra manager api